--- a/app.css
+++ b/app.css
@@ -98,7 +98,6 @@ body{
         flex-direction: column;
         align-items: none;
         width: 100%;
-        width: 100%;
         padding: 3em;
     }
     #castImg{
@@ -134,6 +133,12 @@ body{
 }
 
 @media(max-width: 390px){
+    #castContainer{
+        flex-direction: column;
+        align-items: none;
+        width: 100%;
+        padding: 1em;
+    }
     #img{
         width: 90%;
     }
