--- a/app.css
+++ b/app.css
@@ -130,6 +130,9 @@ body{
         width: 100%;
         text-align: center;
     } 
+    #castContainer{
+        padding: 1em;
+    }
 }
 
 @media(max-width: 390px){
@@ -137,7 +140,6 @@ body{
         flex-direction: column;
         align-items: none;
         width: 100%;
-        padding: 1em;
     }
     #img{
         width: 90%;
